1998-09-04  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus.el (gnus-version-number): Update to 6.9.09.

	* Sync up with Pterodactyl Gnus 0.14.

1998-09-03  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/nndoc.el (nndoc-transform-mime-parts): Insert
	"MIME-Version:" instead of "Mime-Version:".

	* lisp/message.el (message-encode-message-body): Abolished.

	* lisp/message.el: Don't require `rfc2047'.

	* lisp/gnus.el: Delete autoload settings for `qp' and `rfc2047'.

	* lisp/gnus.el (semi-gnus-developers): New constant.

	* lisp/gnus.el (gnus-version-number): Update to 6.9.08.

	* lisp/gnus-xmas.el (gnus-tilde-pad-form): Move to
	`gnus-xmas-redefine' from `gnus-xmas-define'.

	* lisp/gnus-sum.el (gnus-set-mode-line): Use `gnus-truncate-string'
	instead of `truncate-string'.

	* lisp/gnus-sum.el: Don't define menu for "MIME".

	* lisp/gnus-sum.el: Delete key definitions for
	`gnus-article-decode-mime-words' and `gnus-article-decode-charset'.

	* lisp/gnus-spec.el (gnus-tilde-pad-form): New function for the
	benefit of avoiding byte-compile warning.

	* lisp/gnus-soup.el (gnus-soup-send-packet): Set
	`message-user-agent' instead of `message-newsreader'.

	* lisp/message.el (message-set-work-buffer) (message-mode):  Don't
	use `mm-enable-multibyte'.
	* lisp/gnus-util.el (gnus-set-work-buffer): Ditto.
	* lisp/gnus-sum.el (gnus-summary-mode): Ditto.
	* lisp/gnus-msg.el (gnus-copy-article-buffer): Ditto.
	* lisp/gnus-art.el (gnus-article-mode): Ditto.

	* lisp/gnus-art.el (gnus-article-decode-mime-words)
	(gnus-article-decode-charset) (gnus-decode-rfc1522)
	(article-decode-rfc1522) (article-de-quoted-unreadable)
	(article-mime-decode-quoted-printable-buffer): Abolished.

	* lisp/message.el: Don't require `mm-bodies'.
	* lisp/gnus-art.el: Ditto.

	* lisp/gnus-agent.el (gnus-category-line-format-alist): Change
	variable name `name' and `groups' to `gnus-tmp-name' and
	`gnus-tmp-groups'.
	(gnus-category-insert-line): Ditto.
