@@ -1,3 +1,8 @@
+1998-09-04  Katsumi Yamaoka   <t-ichi@po.shiojiri.ne.jp>
+
+	* lisp/pop3-fma.el (pop3-fma-movemail): Add error handle.
+	(pop3-fma-get-movemail-type): Fix typo.
+
 1998-09-04  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* lisp/gnus.el (gnus-version-number): Update to 6.9.09.
